--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Auto Schedule</title>
+    <style>
+      button, a {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body style="margin: 0; height: 100vh">
     <noscript>You need to enable JavaScript to run this app.</noscript>
